--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,9 @@
 header {
     margin: 0;
 }
+
 .heading {
     margin-left: 50px;
-
 }
 
 .logo {
@@ -52,12 +52,12 @@ header {
 }
 
 .title {
-   font-family: "Roboto", sans-serif;
-   font-weight: 200;
-   font-size: 28px;
-   margin-top: 20px;
-   margin-bottom: 90px;
-   color: #fff;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #fff;
 }
 
 .list-inline-item:not(:last-child) {
@@ -71,4 +71,35 @@ header {
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
